# checker

./: .gitignore  README.md  backend_cli.spec  check_templates.json  excel_check_tool.py  excel_check_tool.spec  generate_table_bs.py  index.html  package-lock.json  package.json  position_aliases.json  position_rules.json  启动表格核对工具.bat  打包EXE.bat
.github/workflows/: build-tauri-desktop.yml  build-windows-exe.yml
python_backend/: backend_cli.py
scripts/: create-updater-manifest.mjs  resolve-release-version.mjs  set-version.mjs
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  windows-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rust_check.rs  rust_generate.rs
