[package]
name = "excel-check-tool"
version = "0.3.1"
description = "Excel payroll checking and attendance generator"
authors = ["Ray"]
edition = "2021"

[lib]
name = "excel_check_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
quick-xml = "0.38"
png = "0.18"
rusttype = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[profile.release.package.excel-check-tool]
opt-level = 2
codegen-units = 32
